list item wrap issue

--- a/styles/components/_comparison.scss
+++ b/styles/components/_comparison.scss
@@ -47,6 +47,7 @@
 		li {
 			line-height: 12px;
 			margin-bottom: 40px;
+			white-space: nowrap;
 			a {
 				color: #0459c4;
 			}
